<resources>
    <string name="app_name">ProyectoManuelJimenez</string>
    <string name="titulo_inicio">Tus tareas organizadas y controladas</string>
    <string name="textoBtnEntrar">ENTRAR</string>
    <string name="textoNombre">Manuel Jimenez</string>
    <string name="titulo_tarea">Titulo de la Tarea</string>
    <string name="tvQuedan">Quedan:</string>
    <string name="tvFecha">dd/mm/aaaa</string>
    <string name="tvDias">00</string>
    <string name="tvTextoDias">días</string>
    <string name="it_acerca">Acerca de</string>
    <string name="it_salir">Salir</string>
    <string name="it_crear_tarea">Crear Tarea</string>
    <string name="it_crear_desc">Crear una nueva Tarea</string>
    <string name="it_prioritarias">Prioritarias</string>
    <string name="it_prioritarias_desc">Mostrar tareas prioritarias</string>
    <string name="titulo_dialog">TrassTarea</string>
    <string name="nombre_centro">Instituto IES Trassierra</string>
    <string name="nombre_autor">Manuel Jimenez Bravo</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="frase_final">Tareas claras, mente despejada</string>
    <string name="logo_trassierra">LOGO TRASSIERRA</string>
    <string name="tareas_vacias">NO HAY TAREAS</string>
    <string name="titulo_descripcion">DESCRIPCION DE</string>
    <string name="menu_contextual_editar">Editar</string>
    <string name="menu_contextual_borrar">Borrar</string>
    <string name="borrar_tarea_titulo">BORRAR TAREA</string>
    <string name="borrar_tarea_mensaje">¿Estas seguro de borrar la tarea</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="tv_titulo_crear_tarea">Crear Tarea</string>
    <string name="tv_fecha_creacion">Fecha de Creación</string>
    <string name="tv_fecha_objetivo">Fecha Objetivo</string>
    <string name="tv_progreso">Progreso</string>
    <string name="tv_prioritaria">¿Es prioritaria?</string>
    <string name="btn_siguiente">Siguiente</string>

    <string name="tv_descripcion">Descripcion</string>
    <string name="btn_volver">Volver</string>
    <string name="btn_guardar">Guardar</string>
    <string name="tv_editar">Editar Tarea</string>
    <string name="it_preferencias">Preferencias</string>

    <string name="title_activity_preferencias">PreferenciasActivity</string>
    <string name="preferencia_visualizacion">Visualización</string>
    <string name="preferencia_ordenacion">Ordenación</string>
    <string name="preferencia_tamaño_letra">Tamaño de Letra</string>
    <string name="preferencia_tema">Tema</string>
    <string name="preferencia_switch_claro">Claro</string>
    <string name="preferencia_switch_oscuro">Oscuro</string>
    <string name="preferencia_criterio">Criterio</string>
    <string name="orden_desc">Desc</string>
    <string name="orden_asc">Asc</string>
    <string name="preferencia_almacenamiento">Almacenamiento</string>
    <string name="preferencia_sd">Almacenamiento en tarjeta SD</string>
    <string name="preferencia_bd">Base de Datos</string>
    <string name="bd_externa">Ext</string>
    <string name="bd_interna">Int</string>
    <string name="preferencia_bd_externa">Base de Datos Externa</string>
    <string name="preferencia_nombrebd">Nombre Base de Datos</string>
    <string name="preferencia_ip">IP</string>
    <string name="preferencia_puerto">Puerto</string>
    <string name="preferencia_usuario">Usuario</string>
    <string name="preferencia_password">Contraseña</string>
    <string name="it_estadisticas">Estadisticas</string>
    <string name="btn_borrar">Borrar Archivos</string>
    <string name="tv_estadisticas">Estadisticas de la Aplicación</string>
    <string name="tv_tareas_completadas">Tareas Completadas:</string>
    <string name="tv_resultado">Resultado</string>
    <string name="tv_tareas_prioritarias">Tareas Prioritarias:</string>
    <string name="tv_tareas_atrasadas">Tareas Atrasadas:</string>
    <string name="tv_tarea_mas_cercana">Titulo de la Tarea más Cercana:</string>
    <string name="no_tarea_cercana">No hay tarea cercana</string>
    <string name="tv_detalles">Detalles</string>
    <string name="tv_archivos_asignado">Archivos Asignados</string>
    <string name="img_btn_doc_speakeable_text">Documento de la tarea</string>
    <string name="img_btn_pho_speakeable_text">Foto de la tarea</string>
    <string name="img_btn_aud_speakeable_text">Audio de la tarea</string>
    <string name="img_btn_vid_speakeable_text">Video de la tarea</string>
    <string name="error_detalles_tarea">Error al cargar la tarea seleccionada. Contacte con el administrador</string>
</resources>
