<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado_inicio"
    tools:context=".actividades.MainActivity">

    <com.example.proyectomanueljimenez.views.VistaPersonalizada
        android:id="@+id/lienzoMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitulo"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:text="@string/titulo_inicio"
        android:textAlignment="center"
        android:textColor="@color/grey_dark"
        android:textSize="38sp"
        app:fontFamily="@font/montserrat_medium"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.719"
        tools:ignore="TextSizeCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="613dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEntrar"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/grey_light"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/textoBtnEntrar"
        android:textAlignment="center"
        android:textColor="@color/grey_dark"
        android:textSize="25sp"
        app:cornerRadius="0dp"
        app:elevation="1dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/logo_trassierra"
        android:elevation="1dp"
        app:layout_constraintBottom_toTopOf="@+id/tvTitulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.916"
        app:srcCompat="@drawable/trasstarea_logo500x500" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/textoNombre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.989"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>